fix: remove Weekly Feedback and adjust feelPain to ExerciseSession